@@ -2,6 +2,9 @@ GeneWeb Intermediate version 2.02-1
 -----------------------------------
 
 * Setup program
+  - [Jun 1, 99] The location to open is now always "http://localhost:2316/"
+    independant from the selected language (no more need to end the location
+    with "fr" or "en"): the page is displayed in the selected language.
   - [May 15, 99] Added deletion of ".gwo" file after then "gwc" operation.
   - [May 9, 99] Added predefined palette combination in "data base parameters";
     changed presentation of all page.
